# GoGrapher

./: .gitlab-ci.yml  Cargo.toml  README.md  gographer.pyi  pyproject.toml
.github/workflows/: cicd.yml  publish.yml
debian/: control
src/: cli.rs  compare_report.rs  control_flow_graph.rs  disassembly.rs  error.rs  grapher.rs  lib.rs  main.rs  match.rs
